# scipion-pyworkflow

./: .gitignore  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  query.influx  requirements.txt  setup.py  travis.yaml
.github/workflows/: build.yml  publish_and_tag.yml
pyworkflow/: __init__.py  config.py  constants.py  exceptions.py  object.py  plugin.py  template.py  viewer.py  wizard.py
pyworkflow/apps/: __init__.py  pw_chimera_virus.py  pw_convert.py  pw_manager.py  pw_plot.py  pw_program.py  pw_project.py  pw_protocol_list.py  pw_protocol_mpirun.py  pw_protocol_remote.py  pw_protocol_run.py  pw_run_tests.py  pw_schedule_run.py  pw_sleep.py  pw_sync_data.py  pw_viewer.py
pyworkflow/gui/: __init__.py  browser.py  canvas.py  dialog.py  form.py  graph.py  graph_layout.py  gui.py  matplotlib_image.py  plotter.py  text.py  tooltip.py  tree.py  widgets.py
pyworkflow/mapper/: __init__.py  alchemy_db.py  alchemysql.py  mapper.py  sqlite.py  sqlite_db.py  xmlmapper.py
pyworkflow/project/: __init__.py  config.py  manager.py  project.py  usage.py
pyworkflow/protocol/: __init__.py  bibtex.py  constants.py  executor.py  hosts.py  launch.py  package.py  params.py  protocol.py  scipion.py
pyworkflow/resources/: background_section.png.REMOVED.git-id  protlabels.xcf  sprites.xcf
pyworkflow/tests/: __init__.py  test_canvas.py  test_domain.py  test_mappers.py  test_object.py  test_protocol_execution.py  test_protocol_export.py  test_protocol_output.py  test_tasks.py  test_utils.py  tests.py
pyworkflow/utils/: __init__.py  dataset.py  echo.py  file_transfer.py  graph.py  log.py  mpi.py  path.py  process.py  profiler.py  progressbar.py  (+6 more)
pyworkflowtests/: __init__.py  bibtex.py  objects.py  protocols.py
(+48 files in other folders)
